syntax = "proto3";
 
package class;
 
option go_package = "github.com/datasage-io/datasage/proto/class";
 

//RPC Service 
service Class {
   rpc AddClass ( createClassRequest ) returns ( stream classMessageResponse );
   rpc ListClass( listClassRequest ) returns ( stream listClassResponse );
   rpc DeleteClass ( deleteClassRequest ) returns ( stream classMessageResponse );
}

//Request for Create Class 
message createClassRequest {
    string class_name        = 1;  
    string class_description = 2;
    string class_tag         = 3;
}

//Response for  Class
message classMessageResponse {
    string message = 1;
}

//List Class Request
message listClassRequest {
    string class = 1; 
}

//Class Response Structure
message ClassResponse {
    string                      class_id            = 1;
    string                      class_name          = 2;
    string                      class_description   = 3; 
    string                      class_tag           = 4; 
    string                      generated_by        = 5;
    string                      created_at          = 6;
}

//Response to list class 
message listClassResponse {
    repeated ClassResponse classResponse = 1;
}

//Request for Delete class
message deleteClassRequest {
    string id = 1;
}