syntax = "proto3";

option go_package = "github.com/datasage-io/datasage/proto/datasource";

package datasource;

service Datasource {
    rpc FetchDatasource ( datasourceRequest) returns (stream datasourceResponse);
}

message datasourceRequest {
    string workspace_id  = 1
    string sort          = 2
    string filter        = 3
    string page          = 4 
    string limit         = 5
}

message datasourceResponse {
    repeated DatasourceResponse datasourceResponse = 1;
}

message ListAllDatasource {
    int          id              = 1          
	string       user_id         = 2 
	int          workspace_id    = 3  
	string       data_domain     = 4   
	string       name            = 5 
	string       ds_description  = 6
	string       ds_type         = 7
	string       ds_version      = 8
	string       ds_key          = 9        
	time.Time    created_at      = 10
	time.Time    deleted         = 11 
}
